@@ -19,8 +19,8 @@
 <!-- For the regular version, the versionCode must be odd. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="217"
-        android:versionName="2014.03.31d"
+        android:versionCode="218"
+        android:versionName="2014.04.06a"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.3 (18). -->
